# ledgermem-zed

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml
src/: lib.rs
