[package]
name = "getmnemo"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Proofly <founders@getmnemo.xyz>"]
description = "Mnemo extension for Zed."
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
